--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Testes no site BusinessInsider",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "start": "npx cypress open",
+    "cy:run": "npx cypress run",
+    "test": "npx cypress run"
+  }, 
   "author": "Bárbara Cabral",
   "license": "ISC",
   "dependencies": {
