--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -7,7 +7,7 @@ jobs:
       fail-fast: false # https://github.com/cypress-io/github-action/issues/48
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
       - name: Install Cypress
         run: npm install cypress
       - name: Cypress run 
@@ -15,3 +15,14 @@ jobs:
         uses: cypress-io/github-action@v4
         with:
           browser: chrome
+     - uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          name: cypress-screenshots
+          path: cypress/screenshots
+      # Test run video was always captured, so this action uses "always()" condition
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: cypress-videos
+          path: cypress/videos
