--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -5,11 +5,18 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
+      - uses: actions/checkout@v3
+      - name: Use Node.js 16.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16.x
       - name: Install Dependencies
-        run: npm install
+        run: |
+          npm install
+          npm run build
       - name: Run Lighthouse CI
         run: |
-          npm install -g @lhci/cli@0.6.x
+          npm install -g @lhci/cli@0.13.x
           lhci autorun --disable-network-throttling --disable-cpu-throttling
         env:
-          LHCI_GITHUB_TOKEN: ${{ secrets.LIGHTHOUSE_CHECK_ACCESS_TOKEN }}
+          LHCI_GITHUB_APP_TOKEN: ${{ secrets.LIGHTHOUSE_CHECK_ACCESS_TOKEN }}
