Install node20 + raven

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cypress": "^13.6.1",
     "lighthouse": "^11.4.0",
-    "lighthouse-ci": "^1.13.1"
+    "lighthouse-ci": "^1.13.1",
+    "raven": "^2.6.4"
   }
 }
